Removed format_with_commas() that was messing up the progress output, and updated gitignore with Visual Studio temp files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Visual Studio files
+slnx.sqlite
+*.db
+*.opendb
+*.wsuo
+*.vsidx
+VSWorkspaceState.json
+DocumentLayout.json
+
 # C/C++ build artifacts
 *.exe
 *.obj
