--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ dmypy.json
 .DS_Store
 day9_green_tiles_dean_filled.txt
 day9_green_tiles_dean_filled.tgz
+day9_green_tiles_dean_filled_indexed.txt
 
 # Ruby
 Gemfile.lock
