--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ day9_green_tiles_dean_filled_indexed.txt
 
 # Ruby
 Gemfile.lock
+day9_green_tiles_dean_filled_indexed.idx
+day9_green_tiles_dean_filled_indexed.corners.tmp
