More temp files

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ day9_green_tiles_dean_filled_indexed.txt
 day9_green_tiles_dean_filled_indexed.idx
 day9_green_tiles_dean_filled_indexed.corners.tmp
 day9_green_tiles_dean_filled_indexed.corners
+day9_green_tiles_dean_filled_indexed_candidates.txt
