More updates to progress output, and the max area I've seen so far that wasn't the right answer.

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ day9_green_tiles_dean_filled_indexed.idx
 day9_green_tiles_dean_filled_indexed.corners.tmp
 day9_green_tiles_dean_filled_indexed.corners
 day9_green_tiles_dean_filled_indexed_candidates.txt
+day9_part2_progress.txt
