--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ day9_green_tiles_dean_filled_indexed.corners.tmp
 day9_green_tiles_dean_filled_indexed.corners
 day9_green_tiles_dean_filled_indexed_candidates.txt
 day9_part2_progress.txt
+day9_part2_candidates.csv
